@@ -1,3 +1,8 @@
+1999-02-26  Jochen Wiedmann  <joe@ispsoft.de> (0.1128)
+
+	* lib/HTML/EP/Session/Cookie.pm (encode): Added support for
+	  Compress::Zlib and MIME::Base64.
+
 1999-02-23  Jochen Wiedmann  <joe@ispsoft.de> (0.1127)
 
 	* lib/HTML/EP/Session/Cookie.pm (store): Fixed a bug that caused
